# sparkles-gui

./: .gitignore  Cargo.toml  flake.nix
frontend/: FRONTEND_MIGRATION.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.js
frontend/src/: App.css  App.jsx  index.css  index.scss  main.jsx  trace.js
frontend/src/components/: ActiveConnections.css  ActiveConnections.jsx  ConnectionStatus.css  ConnectionStatus.jsx  ConnectionStatus.scss  DiscoveredClients.jsx  GlobalTooltip.jsx  GlobalTooltip.scss  index.js  media.scss
frontend/src/components/ActiveConnections/: ActiveConnections.scss  EditableThreadName.jsx  StartEndLines.jsx  ThreadCanvas.jsx  ThreadsContainer.jsx  ZoomIndicator.jsx  index.jsx
frontend/src/stores/: ActiveConnection.js  ConnectionThread.js  CursorStore.js  WebSocketStore.js
src/: main.rs  shared.rs  util.rs  ws_protocol.rs
src/tasks/: connection_manager.rs  discover.rs  mod.rs  server.rs  sparkles_connection.rs  sparkles_connection_manager.rs  web_server.rs  ws_connection.rs
src/tasks/sparkles_connection/: event_skipper.rs  storage.rs
static/: 404.html  index.html  script.js  style.css
