[package]
name = "sparkles-gui"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["ws"] }
futures-util = { version = "0.3.31", features = ["io"] }
log = "0.4.27"
open = "5.3.2"
serde_json = "1.0.140"
simple_logger = "5.0.0"
tokio = { version = "1.46.1", features = ["time", "net", "rt-multi-thread", "macros"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["fs"] }
serde = { version = "1.0.219", features = ["derive"] }
strum = { version = "0.27.1", features = ["derive"] }
ctrlc = "3.4.7"
anyhow = "1.0.98"
parking_lot = "0.12.4"

sparkles-parser = { version = "0.1.1", git="https://github.com/skibon02/sparkles.git", branch = "main" }
