[package]
name = "sparkles-gui"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["ws"] }
log = "0.4.27"
open = "5.3.2"
serde_json = "1.0.140"
simple_logger = "5.0.0"
tokio = { version = "1.46.1", features = ["time", "net", "rt-multi-thread", "macros", "tracing"] }
tower-http = { version = "0.6.6", features = ["fs"] }
serde = { version = "1.0.219", features = ["derive", "rc"] }
ctrlc = "3.4.7"
anyhow = "1.0.98"
parking_lot = "0.12.4"
sparkles-parser = { version = "0.2.0" }
slab = "0.4.10"
smallvec = "1.15.1"

sparkles = { version ="0.2.0", optional = true }

[profile.release]
lto=true

[patch.crates-io]
sparkles = { path= "../sparkles/sparkles"}
sparkles-macro = { path= "../sparkles/sparkles-macro"}
sparkles-parser = { path= "../sparkles/sparkles-parser"}

[features]
default = []
self-tracing = ["sparkles"]
